<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    
	 <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top|center_horizontal"
	        android:layout_marginBottom="20dp"
	        android:layout_marginTop="20dp"
	        android:contentDescription="@string/app_name"
	        android:src="@drawable/icon2_96" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/app_name"
	        android:textSize="15sp"
	        android:textStyle="bold" />
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/app_version"
	        android:textSize="15sp"
	        android:textStyle="bold" />
	
		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:text="@string/app_version_date" />
	
		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:text="@string/app_author" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:layout_marginTop="20dp"
		    android:text="@string/app_recent_changes_header"
		    android:textSize="15sp"
		    android:textStyle="bold" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:gravity="center_horizontal"
		    android:text="@string/app_recent_changes_msg" />
	
		<Button
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom|center_horizontal"
		    android:layout_marginTop="10dp"
		    android:onClick="continueAppStart"
		    android:text="@string/app_button_weiter"
		    android:textSize="15sp" />

</LinearLayout>
    
    
    
</ScrollView>

