<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
	<item android:id="@+id/menu_setup"
	    android:icon="@drawable/ic_menu_preferences"
        android:title="@string/menu_setup"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView" />
    
    <item android:id="@+id/menu_gotoDate"
        android:icon="@drawable/ic_menu_goto"
        android:title="@string/menu_gotoDate" 
        android:orderInCategory="100" 
        android:showAsAction="collapseActionView" />
       
<!--	<item android:id="@+id/menu_save"
      	android:title="@string/menu_save"
       	android:orderInCategory="100"
       	android:showAsAction="collapseActionView" /> -->
		
    <item android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_refresh"
      	android:orderInCategory="100"
      	android:showAsAction="collapseActionView" />
    
    <item android:id="@+id/menu_today"
        android:icon="@drawable/ic_menu_today"
        android:title="@string/menu_today"
      	android:orderInCategory="100"
       	android:showAsAction="collapseActionView"/>
    
    <item android:id="@+id/menu_dayPlan"
        android:icon="@drawable/ic_menu_day"
        android:title="@string/menu_dayPlan"
      	android:orderInCategory="100"
       	android:showAsAction="collapseActionView"/>
</menu>
